--- a/web.css
+++ b/web.css
@@ -17,4 +17,30 @@ button{
     width:150px;
     border-radius: 2px;
     cursor: pointer;
+    margin-right:8px
+}
+.join{
+    background-color: white;
+    border-color:rgb(13, 0, 255);
+    border-style:solid;
+    border-width:1px;
+    color:blue;
+    height:36px;
+    width:32px;
+    width:62px;
+    border-radius:2px;
+    cursor:pointer;
+    margin-right:8px;
+}
+.FB{
+    background-color:rgba(21, 104, 192, 0.938);
+    color:white;
+    border:none;
+    height:36px;
+    width:85px;
+    border-radius:18px;
+    font-weight:bold;
+    font-size:15px;
+    cursor: pointer;
+
 }
