--- a/web.css
+++ b/web.css
@@ -24,6 +24,12 @@ button{
     cursor: pointer;
     margin-right:8px
 }
+.button:hover{
+    background-color:blue;
+}
+.contact:active{
+    background-color: rgb(0, 255, 255);
+}
 .contact{
     background-color: white;
     border-color:rgb(13, 0, 255);
@@ -36,6 +42,7 @@ button{
     cursor:pointer;
     margin-right:8px;
 }
+
 .FB{
     background-color:rgba(21, 104, 192, 0.938);
     color:white;
