--- a/web.css
+++ b/web.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .p1{
     text-align: left;
   
@@ -18,10 +22,22 @@ h1{
    
 }
 .img2{
-    width:auto;
+    width:100%;
+    bottom:0;
+    padding: 0;
 }
-button{
+.button{
     background-color: red;
+    color:white;
+    border:none;
+    height:36px;
+    width:150px;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right:8px
+}
+.button1{
+    background-color: rgb(190, 142, 142);
     color:white;
     border:none;
     height:36px;
